--- a/style.css
+++ b/style.css
@@ -8,57 +8,67 @@ html {
     box-sizing: inherit;
   }
 body{
-   background-color: hsl(218, 23%, 16%);
-   
-}
-.wrapper{ width: 500px;
-    height: 280px;
-    margin: 0 auto;
- 
+   background-color: hsl(218, 23%, 16%);}
+
+.wrapper{ 
+  
+  position: relative;
+    max-width: 28rem;
+    min-height: 18rem;
+    margin: 0 auto; 
     border-radius: 7%;
     background-color: hsl(217, 19%, 24%);
     }
  
  
  
-.advicenumber {text-align: center;
-color:hsl(150, 100%, 66%) ;
-font-size: 17px;
+.advicenumber {
+  margin: 0 auto;
+  text-align: center;
+color:hsl(150, 100%, 66%);
+font-size: 1rem;
 font-family: 'Poppins', Arial, Helvetica, sans-serif;
 font-weight: bold;}
+
+
 .advicetext {
 font-family: 'Comfortaa', cursive;
-font-size: 20px;
+font-size: 1.25rem;
 font-weight: bold;
-padding: 2rem 0.3rem 2rem 0.3rem;
+padding: 3rem 0.3rem;
 text-align: center;
 color: white;
 margin: 0 auto;
 width: 400px;
-height: 200px;
-
-}
+height: 200px;}
  
  
-#advicegenerator{
- 
-  width: 55px;
-  height: 18%;
+#advicegenerator {
+  position: absolute;
+  max-width: 5rem;
+  min-height: 2rem;
   border-radius: 50%;
-  display: block;
-  margin: auto;
-margin-top: 15px;
+  top: 90%;
+  left: 45%;}
 
- 
+
+
+.dice-icon{
+  position: relative;
+  max-width: 4rem;
+  min-height: 2rem;
+  padding: 2px;
 }
-.dice-icon{width: 33px;
-padding: 3px;}
 #advicegenerator:hover {background-color:  hsl(150, 100%, 66%);
     box-shadow: 0 0 1.5rem hsl(150, 100%, 66%) }
+
 .divider{
-    margin: auto;
- display: block;
-    z-index: 38;
+    position: absolute;
+    width: 25rem;
+    left: 5%;
+    bottom: 15%; 
+    margin: 0 auto;
+    z-index: 10;
 }
 .attribution {
     text-align: center;
@@ -73,3 +83,38 @@ padding: 3px;}
         text-decoration: none;}
     a:hover{color: hsl(150, 100%, 66%);
         text-decoration: none;}
+
+        @media all and (max-width:62em);
+        @media all and (max-width:45em)
+{.wrapper{  
+  position: relative;
+  max-width: 3rem;
+  min-height: 3rem;
+  margin: 0 auto; 
+  border-radius: 7%;
+  background-color: hsl(217, 19%, 24%);
+ }
+ .divider{
+  position: absolute;
+  width: 5rem;
+  left: 5%;
+  bottom: 10%; 
+  margin: 0 auto;
+  z-index: 10;
+}
+.attribution {
+  text-align: center;
+  margin-top: 1.5rem;
+  color:#bae8e8;
+  margin-top: 2rem;
+  }
+  .advicetext {
+    font-family: 'Comfortaa', cursive;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 1rem 0.3rem;
+    text-align: center;
+    color: white;
+    margin: 0 auto;
+    width: 12rem;
+    height: 6rem;}}
