--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ height: 200px;}
         text-decoration: none;} 
 
 
+
+        
         @media (max-width: 50em)
 { 
   .wrapper{ 
@@ -97,10 +99,26 @@ height: 200px;}
       background-color: hsl(217, 19%, 24%);
       }
       .divider{
+        display: none;
+    }
+}
+
+@media only screen and (min-device-width : 50em) 
+and (max-device-width : 64em)
+{ 
+  .wrapper{ 
+    position: relative;
+     max-width: 80%;
+     min-height: 70%;
+     margin: 0 auto;
+      border-radius: 7%;
+      background-color: hsl(217, 19%, 24%);
+      }
+      .divider{
         position: absolute;
-        max-width:  90%;
-        left: 5%;
-        bottom: 15%; 
+        width: 25em;
+        left: 17%;
+        bottom: 18%; 
         margin: 0 auto;
         z-index: 10;
         overflow:hidden;
